# provoit-front

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.prod.html
.github/workflows/: ci.yml  pages.yml
src/: app.rs  auth.rs  components.rs  hooks.rs  main.rs  pages.rs  router.rs
src/components/: add_vehicle.rs  alert.rs  menu.rs  navbar.rs  trip_card.rs  vehicle_card.rs
src/hooks/: use_token.rs
src/pages/: create_trip.rs  create_user.rs  login_page.rs  page_not_found.rs  profile_page.rs  search_trip_page.rs
src/utils/: request.rs
