[package]
name = "provoit-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3"
dioxus-router = "0.3.0"
provoit-types = { git = "https://github.com/Provoit/provoit-types.git", version = "0.1.0" }
console_log = { version = "1.0.0", features = ["color"], optional = true }
log = { version = "0.4.18", optional = true }
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.164"


[features]
logging = ["dep:console_log", "dep:log"]
default = ["logging"]


[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = "0.3"


[target.'cfg(not(target_family = "wasm"))'.dependencies]
dioxus-desktop = "0.3.0"


[profile.release]
strip = true
lto = true
opt-level = "s"
